Fri Sep 01 23:28:43 CEST 2000 Gabriele Bartolini <g.bartol@comune.prato.it>

	* URL.cc: added DefaultPort() method and changed NNTP default port
	from 523 to 119.
	* Document.cc: management of NNTP documents retrieval.

Fri Sep 01 19:05:02 CEST 2000 Gabriele Bartolini <g.bartol@comune.prato.it>

	* htnet/HtNNTP.* : just created them ...
	* htnet/HtHTTP.cc : removed modification_time deletion in the
	class destructor.

Thu Sep 01 12:00:00 2000  Toivo Pedaste <toivo@ucs.uwa.edu.au>

	* htdig/Retriever.cc: Allow for modify time being set to
	current time if not available

Thu Aug 31 13:21:12 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/defaults.cc (allow_in_form, build_select_lists):
	Add clearer instructions to allow_in_form description, add
	cross-links between these two sections.

	* htdoc/attrs.html, cf_by{name,prog}.html: Reran cf_generate.pl.

Wed Aug 30 10:01:59 CEST 2000 Gabriele Bartolini <g.bartol@comune.prato.it>

	* substition of char * returned types to const String & in URL and
	Server classes. This change made me do lots of changes in other files:
	HtFile.cc, HtHTTP.cc, HtConfiguration.*, Document.*, ExternalParser.*,
	Retriever.*.

Tue Aug 30 12:00:00 2000  Toivo Pedaste <toivo@ucs.uwa.edu.au>

	* htlibs/md5.cc, htlibs/md5.h: Generate md5 hash of
	a page and also optionally the modify date.

	* htlibs/mhash_md5.h, htlibs/mhash_md5.c, htlibs/libdefs.h:
	Md5 hash code from libmhash

	* htdig/Retriever.cc: Allow storing m5 hashes of pages
	in order to reject aliases.

	* htcommon/defaults.cc: Options "check_unique_md5" and
	"check_unique_date"
	
Tue Aug 29 08:51:39 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/upgrade.html: Add description of the difference between
	htmerge and htpurge. Mention other httools.

	* htsearch/parser.cc, htsearch/parser.h: Merge in patch by Quim
	Sanmarti <qss@gtd.es> to fix problems with phrase searching and
	AND searches and improve performance.
